codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 已排队的后续消息                     
  ↳ 排队的后续问题                         
    ⌥ + ↑ 编辑最近排队的消息               
                                                
› 让 Codex 做任何事                      
                                                
  ? 查看快捷键            100% 剩余上下文
