codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 工作中 (0秒 • 按 esc 中断)…
                              
                              
› 让 Codex 做任何事    
                              
           100% 剩余上下文
